--- a/src/components/Allcss.css
+++ b/src/components/Allcss.css
@@ -264,7 +264,8 @@
   text-align: center;
   font-weight: bold;
   font-family: Georgia, 'Times New Roman', Times, serif;
-  background-color: #2ebbc5;
+  background-color: #1b1b19;
+  color: white;
 
 }
 table, th, td {
