--- a/src/components/Allcss.css
+++ b/src/components/Allcss.css
@@ -315,3 +315,8 @@ td div{
   color: #333;
   font-style: italic;
 }
+.spinner-loading h1{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
