--- a/src/components/Allcss.css
+++ b/src/components/Allcss.css
@@ -1,6 +1,6 @@
 .login-page {
     font-family: Arial, sans-serif;
-    background-image: linear-gradient(to right, #c6ffdd, #fbd786, #f7797d);
+    /* background-image: linear-gradient(to right, #c6ffdd, #fbd786, #f7797d); */
     width: 100wh;
     height: 100vh;
   }
@@ -235,6 +235,7 @@
   /* width: 80%; */
   justify-content: center;
   align-items: center;
+  margin-top: 2em;
  
 
 }
@@ -242,16 +243,17 @@
   width: 100wh;
 }
 .root{
-  background-image: linear-gradient(to right, #c6ffdd, #fbd786, #f7797d);
+  /* background-image: linear-gradient(to right, #c6ffdd, #fbd786, #f7797d); */
   width: 100wh;
   height: 100vh;
 }
 .align input{
-  margin: 1em;
+  /* margin: 1em;
   width: 50%;
   padding: 1em;
   border-radius: 3em;
-  background: transparent;
+  background: transparent; */
+  border:2px solid black;
 }
 .align button{
   border-radius: 2em;
@@ -319,4 +321,10 @@ td div{
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.buttons{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 4em;
 }
